--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Dependencies
-markdown:         redcarpet
+markdown:         kramdown
 highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
+relative_permalinks: false
 
 # Setup
 title:            Hyde
@@ -20,7 +20,9 @@ author:
 paginate:         5
 
 # Custom vars
-version:          2.1.0
+version:          3.0
 
 github:
   repo:           https://github.com/poole/hyde
+
+plugins: [jekyll-paginate]
