--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ author:
   url:            https://twitter.com/mdo
 
 paginate:         5
+excerpt_separator: <!--more-->
 
 # Custom vars
 version:          3.0
